# cookiecutter-research-project

./: LICENSE  README.md  cookiecutter.json
hooks/: README.md  post_gen_project.py
{{cookiecutter.project_directory_name}}/: .gitignore  README.md  environment.yml  install_environment.sh
{{cookiecutter.project_name.replace(' ', '_').replace('-', '_')}}/: .gitignore  README.md  environment.yml  metadata.txt  setup.cfg
{{cookiecutter.project_name.replace(' ', '_').replace('-', '_')}}/documents/: README.md
{{cookiecutter.project_name.replace(' ', '_').replace('-', '_')}}/init/: init.R  init.m
{{cookiecutter.project_name.replace(' ', '_').replace('-', '_')}}/matlab_toolboxes/: README.md
{{cookiecutter.project_name.replace(' ', '_').replace('-', '_')}}/outputs/: README.md
{{cookiecutter.project_name.replace(' ', '_').replace('-', '_')}}/playground/: README.md
{{cookiecutter.project_name.replace(' ', '_').replace('-', '_')}}/playground/notebooks/: README.md
{{cookiecutter.project_name.replace(' ', '_').replace('-', '_')}}/scripts/: README.md
{{cookiecutter.project_name}}/: AUTHORS.md  README.md  remove_environment.sh
