[sdist]
formats = gztar

[check-manifest]
ignore =
    *.sh
    *.yml
    *.yaml
    analysis
    analysis/*
    data
    data/*
    figures
    figures/*
    matlab_toolboxes
    matlab_toolboxes/*

[metadata]
name = {{cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_')}}
version = 0.0.1
description = {{cookiecutter.project_short_description}}
author = {{cookiecutter.full_name.replace('\"', '\\\"')}}
author_email = {{cookiecutter.email}}
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name.lower().replace(' ', '_')}}
long_description = file: README.md
long_description_content_type = text/markdown
license = {{cookiecutter.open_source_license}}
license_file = LICENSE

{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/
classifiers =
    Development Status :: 2 - Pre-Alpha 
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
{%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}

### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
python_requires = >=3.6
################ Up until here

zip_safe = False
packages = find: